--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -30,10 +30,10 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
-.top-menu, .top-menu:hover, .top-menu:visited {
+.top-menu, .top-menu:hover, .top-menu:visited{
     color: #ffffff;
     float: right;
-    font-size: 26pt;
+    font-size: 20pt;
     margin-right: 20px;
 }
 
@@ -43,4 +43,8 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+
+small {
+    font-size: 10pt;  
 }
